--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev":"ts-node-dev src/server.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "celebrate": "^15.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^5.9.1"
   }
 }
