feat: create user auth feature

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/arquivo?schema=public"
+SECRET_JWT=d0e3cec4c0a044f59b9e7a1aa4309cc2
