--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/arquivo?schema=public"
+DATABASE_URL="postgres://arquivo_pt_user:jheWpfi7UWgdqwPpoi9vOUW4UDez8GEp@dpg-cn9n5r0cmk4c73a12fp0-a.oregon-postgres.render.com/arquivo_pt"
 SECRET_JWT=d0e3cec4c0a044f59b9e7a1aa4309cc2
