--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./build/src/server.js",
+    "start": "node ./build/server.js",
     "dev": "ts-node-dev src/server.ts",
     "build":"tsc",
     "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
