--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "scripts": {
     "start": "node ./build/server.js",
     "dev": "ts-node-dev src/server.ts",
-    "build":"tsc",
+    "build": "tsc",
     "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "postinstall": "yarn prisma:generate"
-
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.9.1",
     "zod": "^3.22.4"
