--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/arquivo?schema=public"
 SECRET_JWT=d0e3cec4c0a044f59b9e7a1aa4309cc2
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PASS=b98c39a7532469
+MAIL_USER=513d1e0e661221
+MAIL_PORT=2525
