--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
     "zod": "^3.22.4"
   }
