feat: refatoring send mail feature

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PASS=b98c39a7532469
 MAIL_USER=513d1e0e661221
 MAIL_PORT=2525
+REDIS_URL=redis://red-cn9osma1hbls73dhbamg:6379
