--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "tsc",
     "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
-    "postinstall": "yarn prisma:generate"
+    "postinstall": "yarn prisma:generate",
+    "dev:queue": "ts-node-dev src/queue.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/bull": "^4.10.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
@@ -25,6 +27,7 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.2",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
