--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.9",
