--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^7.1.5",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.2.0",
     "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
     "zod": "^3.22.4"
