--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node-mailjet": "^3.3.12",
     "@types/nodemailer": "^6.4.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
@@ -36,6 +37,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.2.0",
+    "node-mailjet": "^6.0.5",
     "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
     "zod": "^3.22.4"
